# lvgl_raylib

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  lvgl_raylib.h
lvgl_raylib_example/: CMakeLists.txt  lv_conf.h  main.c
src/: lvgl_raylib.c  lvgl_raylib_display.c  lvgl_raylib_display.h  lvgl_raylib_input.c  lvgl_raylib_input.h
todo_app/: CMakeLists.txt  lv_conf.h  main.c
